pruebas_ejemplo1/gcc_traces/gcc_stdC17_parameter.txt
ejemplo1.c:24:19: warning: missing terminating " character
   24 | const char* s1 = R"foo(
      |                   ^
ejemplo1.c:24:19: error: missing terminating " character
   24 | const char* s1 = R"foo(
      |                   ^~~~~
ejemplo1.c:24:18: error: ‘R’ undeclared here (not in a function)
   24 | const char* s1 = R"foo(
      |                  ^
ejemplo1.c:25:1: error: expected ‘,’ or ‘;’ before ‘Hello’
   25 | Hello
      | ^~~~~
ejemplo1.c:27:5: warning: missing terminating " character
   27 | )foo";
      |     ^
ejemplo1.c:27:5: error: missing terminating " character
   27 | )foo";
      |     ^~
ejemplo1.c: In function ‘gets_example_func’:
ejemplo1.c:34:16: warning: ‘return’ with a value, in function returning void
   34 |         return 1;
      |                ^
ejemplo1.c:30:6: note: declared here
   30 | void gets_example_func(void) {
      |      ^~~~~~~~~~~~~~~~~
ejemplo1.c: In function ‘get_y_or_n’:
ejemplo1.c:53:9: warning: implicit declaration of function ‘gets’; did you mean ‘fgets’? [-Wimplicit-function-declaration]
   53 |         gets(response);
      |         ^~~~
      |         fgets
ejemplo1.c: In function ‘main’:
ejemplo1.c:96:11: error: ‘s2’ undeclared (first use in this function); did you mean ‘s1’?
   96 |     puts (s2);
      |           ^~
      |           s1
ejemplo1.c:96:11: note: each undeclared identifier is reported only once for each function it appears in
